5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1595_2049.log
== TEST (2019-04-02 00:08:57) 
-- CODE:
dividendo = int(input(("dividendo"))
divisor = int(input("divisor"))
-- ERROR:
File "XXXX", line 2
    divisor = int(input())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:09:12) 
-- CODE:
dividendo = int(input("dividendo"))
divisor = int(input("divisor"))
-- ERROR:
File "XXXX", line 2
    divisor = int(input())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:52:06) 
-- CODE:
dividendo = int(input("dividendo"))
divisor = int(input("divisor"))




-- ERROR:
File "XXXX", line 2
    divisor = int(input())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:55:56) 
-- CODE:
dividendo = int(input("dividendo"))
divisor = int(input("divisor"))
print(dividendo)
print(divisor)
print(dividendo//divisor)
print(dividendo%divisor)



-- EXECUTION TIME:
0.149752
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
